--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <h2>Trendy Merches</h2>
         <h1>Coming Soon</h1>
         <div id="progress"><div id="fill"><div id="barpercent"><h3>35%</h3></div></div></div>
+        <a href="https://liyu.vercel.app/">Visit our website mean while!</a>
     </div>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </body>
