--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
             }
         }
     </style>
-    <title>Coming Soon</title>
+    <title>Trendy Merches | the influencer first online store</title>
+    <meta name="description" content="Trendy Merches is an online store made for 
+        influencers to help them sell their merches to their followers and fans.
+    We ara all in to support these amazing creators all over the world.">
 </head>
 <body>
     <div id="main">
